# aoc25

python/: d01.py  d02.py  d02fast.py  d03.py  d04.py  d04np.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d12mip.py  pyproject.toml  utils.py
rust/: Cargo.toml
rust/src/: utils.rs
rust/src/utils/: load.rs
