[project]
name = "aoc25"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "ortools>=9.14.6206",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "tqdm>=4.67.1",
]
